// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationModal styles should render with an SVG 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background: rgba(0, 0, 0, 0.4);
  z-index: 1000;
}

@media (min-width: 480px) {
  .circuit-0 {
    -webkit-overflow-scrolling: touch;
    overflow-y: auto;
  }
}

.circuit-1 {
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: calc(100vw - 40px * 2);
  max-width: 420px;
  max-height: calc(100vh - 16px * 2);
  outline: none;
  background-color: #FFF;
  border-radius: 16px;
  padding: 24px;
  text-align: center;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  overflow-y: auto;
}

@media (max-width: 479px) {
  .circuit-1 {
    -webkit-overflow-scrolling: touch;
  }
}

.circuit-2 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(12px - 1px);
  border-color: transparent!important;
  position: absolute;
  top: 8px;
  right: 8px;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-2:active,
.circuit-2[aria-expanded='true'],
.circuit-2[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

@media (min-width: 480px) {
  .circuit-2 {
    top: 16px;
    right: 16px;
  }
}

.circuit-3 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-4 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-7 {
  max-width: 232px;
  height: 120px;
  object-fit: contain;
  margin: 0 auto 24px;
}

.circuit-8 {
  height: 100%;
  width: 100%;
}

.circuit-9 {
  font-weight: 700;
  color: #000;
  letter-spacing: -0.03em;
  font-size: 1.25rem;
  line-height: 1.5rem;
  margin-bottom: 8px;
}

.circuit-10 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  margin-top: 24px;
}

@media (min-width: 480px) {
  .circuit-11 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
  }
}

.circuit-12 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #3063E9;
  border-color: #3063E9;
  color: #FFF;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
}

.circuit-12:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-12:focus::-moz-focus-inner {
  border: 0;
}

.circuit-12:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-12:disabled,
.circuit-12[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-12:hover {
  background-color: #234BC3;
  border-color: #234BC3;
}

.circuit-12:active,
.circuit-12[aria-expanded='true'],
.circuit-12[aria-pressed='true'] {
  background-color: #1A368E;
  border-color: #1A368E;
}

.circuit-16 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  margin-right: 16px;
  background-color: #FFF;
  border-color: #999;
  color: #000;
}

.circuit-16:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-16:focus::-moz-focus-inner {
  border: 0;
}

.circuit-16:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-16:disabled,
.circuit-16[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-16:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-16:active,
.circuit-16[aria-expanded='true'],
.circuit-16[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-16:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-16:active,
.circuit-16[aria-expanded='true'],
.circuit-16[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

@media (max-width: 479px) {
  .circuit-16 {
    margin-right: 0;
    margin-top: 16px;
    background-color: transparent;
    border-color: transparent;
    color: #3063E9;
    padding-left: 0;
    padding-right: 0;
  }

  .circuit-16:hover {
    background-color: transparent;
    border-color: transparent;
    color: #234BC3;
  }

  .circuit-16:active,
  .circuit-16[aria-expanded='true'],
  .circuit-16[aria-pressed='true'] {
    background-color: transparent;
    border-color: transparent;
    color: #1A368E;
  }
}

<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="circuit-0"
    >
      <div
        aria-modal="true"
        class="circuit-1"
        role="dialog"
        tabindex="-1"
      >
        <button
          class="circuit-2"
          title="Close modal"
          type="button"
        >
          <span
            class="circuit-3"
          >
            <span
              class="circuit-4"
            />
          </span>
          <span
            class="circuit-5"
          >
            <svg
              fill="none"
              height="16"
              role="presentation"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="circuit-4"
            >
              Close modal
            </span>
          </span>
        </button>
        <div
          class="circuit-7"
        >
          <svg
            aria-hidden="true"
            class="circuit-8"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 12c0 .5-.4 1-1 1h-8v8c0 .5-.4 1-1 1s-1-.5-1-1v-8H3c-.5 0-1-.5-1-1s.5-1 1-1h8V3c0-.5.4-1 1-1s1 .5 1 1v8h8c.6 0 1 .5 1 1z"
              fill="currentColor"
            />
          </svg>
        </div>
        <h2
          class="circuit-9"
        >
          It's time to update your browser
        </h2>
        <p
          class="circuit-10"
        >
          You'll soon need a more up-to-date browser to continue using SumUp.
        </p>
        <div
          class="circuit-11"
        >
          <button
            class="circuit-12"
          >
            <span
              class="circuit-3"
            >
              <span
                class="circuit-4"
              />
            </span>
            <span
              class="circuit-5"
            >
              Update now
            </span>
          </button>
          <button
            class="circuit-16"
          >
            <span
              class="circuit-3"
            >
              <span
                class="circuit-4"
              />
            </span>
            <span
              class="circuit-5"
            >
              Not now
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationModal styles should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background: rgba(0, 0, 0, 0.4);
  z-index: 1000;
}

@media (min-width: 480px) {
  .circuit-0 {
    -webkit-overflow-scrolling: touch;
    overflow-y: auto;
  }
}

.circuit-1 {
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: calc(100vw - 40px * 2);
  max-width: 420px;
  max-height: calc(100vh - 16px * 2);
  outline: none;
  background-color: #FFF;
  border-radius: 16px;
  padding: 24px;
  text-align: center;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  overflow-y: auto;
}

@media (max-width: 479px) {
  .circuit-1 {
    -webkit-overflow-scrolling: touch;
  }
}

.circuit-2 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(12px - 1px);
  border-color: transparent!important;
  position: absolute;
  top: 8px;
  right: 8px;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-2:active,
.circuit-2[aria-expanded='true'],
.circuit-2[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

@media (min-width: 480px) {
  .circuit-2 {
    top: 16px;
    right: 16px;
  }
}

.circuit-3 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-4 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-7 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  max-width: 232px;
  height: 120px;
  object-fit: contain;
  margin: 0 auto 24px;
}

.circuit-8 {
  font-weight: 700;
  color: #000;
  letter-spacing: -0.03em;
  font-size: 1.25rem;
  line-height: 1.5rem;
  margin-bottom: 8px;
}

.circuit-9 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  margin-top: 24px;
}

@media (min-width: 480px) {
  .circuit-10 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
  }
}

.circuit-11 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #3063E9;
  border-color: #3063E9;
  color: #FFF;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
}

.circuit-11:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-11:focus::-moz-focus-inner {
  border: 0;
}

.circuit-11:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-11:disabled,
.circuit-11[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-11:hover {
  background-color: #234BC3;
  border-color: #234BC3;
}

.circuit-11:active,
.circuit-11[aria-expanded='true'],
.circuit-11[aria-pressed='true'] {
  background-color: #1A368E;
  border-color: #1A368E;
}

.circuit-15 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  margin-right: 16px;
  background-color: #FFF;
  border-color: #999;
  color: #000;
}

.circuit-15:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-15:focus::-moz-focus-inner {
  border: 0;
}

.circuit-15:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-15:disabled,
.circuit-15[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-15:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-15:active,
.circuit-15[aria-expanded='true'],
.circuit-15[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-15:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-15:active,
.circuit-15[aria-expanded='true'],
.circuit-15[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

@media (max-width: 479px) {
  .circuit-15 {
    margin-right: 0;
    margin-top: 16px;
    background-color: transparent;
    border-color: transparent;
    color: #3063E9;
    padding-left: 0;
    padding-right: 0;
  }

  .circuit-15:hover {
    background-color: transparent;
    border-color: transparent;
    color: #234BC3;
  }

  .circuit-15:active,
  .circuit-15[aria-expanded='true'],
  .circuit-15[aria-pressed='true'] {
    background-color: transparent;
    border-color: transparent;
    color: #1A368E;
  }
}

<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="circuit-0"
    >
      <div
        aria-modal="true"
        class="circuit-1"
        role="dialog"
        tabindex="-1"
      >
        <button
          class="circuit-2"
          title="Close modal"
          type="button"
        >
          <span
            class="circuit-3"
          >
            <span
              class="circuit-4"
            />
          </span>
          <span
            class="circuit-5"
          >
            <svg
              fill="none"
              height="16"
              role="presentation"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="circuit-4"
            >
              Close modal
            </span>
          </span>
        </button>
        <img
          alt=""
          class="circuit-7"
          src="/images/illustration-update-browser.svg"
        />
        <h2
          class="circuit-8"
        >
          It's time to update your browser
        </h2>
        <p
          class="circuit-9"
        >
          You'll soon need a more up-to-date browser to continue using SumUp.
        </p>
        <div
          class="circuit-10"
        >
          <button
            class="circuit-11"
          >
            <span
              class="circuit-3"
            >
              <span
                class="circuit-4"
              />
            </span>
            <span
              class="circuit-5"
            >
              Update now
            </span>
          </button>
          <button
            class="circuit-15"
          >
            <span
              class="circuit-3"
            >
              <span
                class="circuit-4"
              />
            </span>
            <span
              class="circuit-5"
            >
              Not now
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationModal styles should render without an image 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background: rgba(0, 0, 0, 0.4);
  z-index: 1000;
}

@media (min-width: 480px) {
  .circuit-0 {
    -webkit-overflow-scrolling: touch;
    overflow-y: auto;
  }
}

.circuit-1 {
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: calc(100vw - 40px * 2);
  max-width: 420px;
  max-height: calc(100vh - 16px * 2);
  outline: none;
  background-color: #FFF;
  border-radius: 16px;
  padding: 24px;
  text-align: center;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  overflow-y: auto;
}

@media (max-width: 479px) {
  .circuit-1 {
    -webkit-overflow-scrolling: touch;
  }
}

.circuit-2 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(12px - 1px);
  border-color: transparent!important;
  position: absolute;
  top: 8px;
  right: 8px;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-2:active,
.circuit-2[aria-expanded='true'],
.circuit-2[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

@media (min-width: 480px) {
  .circuit-2 {
    top: 16px;
    right: 16px;
  }
}

.circuit-3 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-4 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-7 {
  font-weight: 700;
  color: #000;
  letter-spacing: -0.03em;
  font-size: 1.25rem;
  line-height: 1.5rem;
  margin-bottom: 8px;
  max-width: 80%;
  margin-right: auto;
  margin-left: auto;
}

.circuit-8 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  margin-top: 24px;
}

@media (min-width: 480px) {
  .circuit-9 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
  }
}

.circuit-10 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #3063E9;
  border-color: #3063E9;
  color: #FFF;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
}

.circuit-10:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-10:focus::-moz-focus-inner {
  border: 0;
}

.circuit-10:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-10:disabled,
.circuit-10[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-10:hover {
  background-color: #234BC3;
  border-color: #234BC3;
}

.circuit-10:active,
.circuit-10[aria-expanded='true'],
.circuit-10[aria-pressed='true'] {
  background-color: #1A368E;
  border-color: #1A368E;
}

.circuit-14 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  margin-right: 16px;
  background-color: #FFF;
  border-color: #999;
  color: #000;
}

.circuit-14:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-14:focus::-moz-focus-inner {
  border: 0;
}

.circuit-14:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-14:disabled,
.circuit-14[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-14:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-14:active,
.circuit-14[aria-expanded='true'],
.circuit-14[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-14:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-14:active,
.circuit-14[aria-expanded='true'],
.circuit-14[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

@media (max-width: 479px) {
  .circuit-14 {
    margin-right: 0;
    margin-top: 16px;
    background-color: transparent;
    border-color: transparent;
    color: #3063E9;
    padding-left: 0;
    padding-right: 0;
  }

  .circuit-14:hover {
    background-color: transparent;
    border-color: transparent;
    color: #234BC3;
  }

  .circuit-14:active,
  .circuit-14[aria-expanded='true'],
  .circuit-14[aria-pressed='true'] {
    background-color: transparent;
    border-color: transparent;
    color: #1A368E;
  }
}

<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  />
  <div
    class="ReactModalPortal"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="circuit-0"
    >
      <div
        aria-modal="true"
        class="circuit-1"
        role="dialog"
        tabindex="-1"
      >
        <button
          class="circuit-2"
          title="Close modal"
          type="button"
        >
          <span
            class="circuit-3"
          >
            <span
              class="circuit-4"
            />
          </span>
          <span
            class="circuit-5"
          >
            <svg
              fill="none"
              height="16"
              role="presentation"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="circuit-4"
            >
              Close modal
            </span>
          </span>
        </button>
        <h2
          class="circuit-7"
        >
          It's time to update your browser
        </h2>
        <p
          class="circuit-8"
        >
          You'll soon need a more up-to-date browser to continue using SumUp.
        </p>
        <div
          class="circuit-9"
        >
          <button
            class="circuit-10"
          >
            <span
              class="circuit-3"
            >
              <span
                class="circuit-4"
              />
            </span>
            <span
              class="circuit-5"
            >
              Update now
            </span>
          </button>
          <button
            class="circuit-14"
          >
            <span
              class="circuit-3"
            >
              <span
                class="circuit-4"
              />
            </span>
            <span
              class="circuit-5"
            >
              Not now
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
